# alimer

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CREDITS.md  LICENSE  README.md  alimer.py  azure-pipelines.yml  cmake_vs2017_x64.bat  make_vs2017_x64.bat  make_vs2017_x64_ninja.bat  make_vs2017_x64_shared.bat
Source/: CMakeLists.txt
Source/Alimer/: Alimer.h  AlimerConfig.h  AlimerConfig.h.in  AlimerPluginApi.h  AlimerVersion.h.in  CMakeLists.txt  PlatformDef.h  PlatformIncl.h
Source/Alimer/Application/: Application.cpp  Application.h  GameSystem.cpp  GameSystem.h  Main.cpp  Main.h  Window.cpp  Window.h  WindowHandle.h
Source/Alimer/Audio/: Audio.cpp  Audio.h  Types.cpp  Types.h
Source/Alimer/Base/: Cache.h  Containers.h  Debug.cpp  Debug.h  HashMap.h  IntrusiveList.h  IntrusivePtr.h  Iterator.h  MurmurHash.cpp  MurmurHash.h  ObjectPool.h  Ptr.cpp  Ptr.h  String.cpp  String.h  StringHash.cpp  StringHash.h  Swap.cpp  Swap.h  TemporaryHashmap.h  Vector.cpp  Vector.h
Source/Alimer/Core/: Application.cpp  Application.h  Engine.cpp  Engine.h  Event.cpp  Event.h  Flags.h  Log.cpp  Log.h  Main.h  Object.cpp  Object.h  Platform.cpp  Platform.h  Plugin.h  PluginManager.cpp  PluginManager.h  Ptr.cpp  Ptr.h  RecycleArray.h  String.cpp  String.h  StringHash.cpp  StringHash.h  Timer.cpp  Timer.h  Vector.h  Window.h
Source/Alimer/Debug/: Debug.cpp  Debug.h  DebugNew.h  Log.cpp  Log.h
Source/Alimer/Editor/: StudioApplication.cpp  StudioApplication.h
Source/Alimer/Foundation/: Ptr.cpp  Ptr.h
Source/Alimer/Graphics/: BackendTypes.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandContext.cpp  CommandContext.h  CommandEncoder.cpp  CommandEncoder.h  CommandQueue.cpp  CommandQueue.h  Commands.h  Framebuffer.cpp  Framebuffer.h  GPUDevice.cpp  GPUDevice.h  GPUDeviceImpl.h  GPUResource.cpp  GPUResource.h  GpuAdapter.cpp  GpuAdapter.h  GpuBuffer.cpp  GpuBuffer.h  GpuDeviceFeatures.cpp  GpuDeviceFeatures.h  GpuResource.cpp  GpuResource.h  Graphics.cpp  Graphics.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsDeviceFeatures.cpp  GraphicsDeviceFeatures.h  GraphicsImpl.h  GraphicsResource.cpp  GraphicsResource.h  IndexBuffer.cpp  IndexBuffer.h  Pipeline.cpp  Pipeline.h  (+36 more)
Source/Alimer/IO/: FileStream.cpp  FileStream.h  FileSystem.cpp  FileSystem.h  MemoryStream.cpp  MemoryStream.h  Path.cpp  Path.h  ResourceRef.cpp  ResourceRef.h  Stream.cpp  Stream.h
Source/Alimer/Input/: Input.cpp  Input.h
Source/Alimer/Math/: Color.cpp  Color.h  Math.cpp  Math.h  Math.inl  MathUtil.cpp  MathUtil.h  Matrix2.h  Matrix4.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  math_impl.h
Source/Alimer/Network/: Socket.cpp  Socket.h
Source/Alimer/Renderer/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderContext.cpp  RenderContext.h  RenderPipeline.cpp  RenderPipeline.h  SceneRenderer.cpp  SceneRenderer.h
Source/Alimer/Resource/: Image.cpp  Image.h  Resource.cpp  Resource.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h
Source/Alimer/Scene/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  ComponentSystem.cpp  ComponentSystem.h  Entity.cpp  Entity.h  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  SceneComponent.cpp  SceneComponent.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  TransformComponent.cpp  TransformComponent.h
Source/Alimer/Serialization/: Deserializer.cpp  Deserializer.h  JsonDeserializer.cpp  JsonDeserializer.h  JsonSerializer.cpp  JsonSerializer.h  Serializable.cpp  Serializable.h  Serializer.cpp  Serializer.h
Source/Alimer/UI/: Gui.cpp  Gui.h
Source/Alimer/Util/: HashMap.h  Intrusive.h  IntrusiveList.h  ObjectPool.h  Ptr.cpp  Ptr.h  TemporaryHashmap.h  Util.cpp  Util.h
Source/Alimer/shaders/: imgui.frag  imgui.vert
Source/Assets/Compiler/: CMakeLists.txt  main.cpp
Source/Assets/Core/: AssetCompiler.cpp  AssetCompiler.h  AssetDatabase.cpp  AssetDatabase.h  CMakeLists.txt
Source/Managed/: CMakeLists.txt  Directory.Build.props
Source/Managed/Alimer.Studio/: CMakeLists.txt  Program.cs
Source/Managed/AlimerSharp/: AlimerApi.cs  AlimerSharp.Desktop.csproj  AlimerSharp.csproj  Application.cs  ApplicationSettings.cs  CMakeLists.txt  Platform.cs  PlatformFamily.cs  PlatformType.cs
Source/Managed/Assets/: CMakeLists.txt
Source/Managed/Editor/: CMakeLists.txt
Source/Managed/core/: CMakeLists.txt
Source/Managed/editor/: CMakeLists.txt
Source/Managed/libAlimerSharp/: Application.cpp  Application.h  CMakeLists.txt  RefCounted.cpp
Source/Player/: CMakeLists.txt  main.cpp
Source/Plugins/: CMakeLists.txt
Source/Plugins/TestPlugin/: CMakeLists.txt  TestPlugin.cpp
Source/Tools/: CMakeLists.txt
Source/Tools/Editor/: CMakeLists.txt
Source/Tools/Player/: CMakeLists.txt  main.cpp
Source/Tools/ShaderCompiler/: CMakeLists.txt  main.cpp
Source/Tools/Studio/: CMakeLists.txt  Editor.cpp  Editor.h  Editor.hpp
Source/Tools/shaderc/: CMakeLists.txt  main.cpp
Source/VulkanD3D12/: CMakeLists.txt  Device.cpp  Instance.cpp  PhysicalDevice.cpp  Vulkan.cpp  VulkanD3D.h
Source/libalimerc/: Application.cpp  Application.h  CMakeLists.txt  RefCounted.cpp  alimer_app.cpp  alimer_app.h  alimer_gpu.cpp  alimer_gpu.h  alimer_platform.h
src/Alimer/: Alimer.h  AlimerConfig.h.in  AlimerPlatform.h  CMakeLists.txt  PlatformDef.h
src/Alimer/Application/: Application.cpp  Application.h  GameSystem.cpp  GameSystem.h  Window.cpp  Window.h
src/Alimer/Audio/: Audio.cpp  Audio.h
src/Alimer/Base/: Ptr.h  (+18 more)
src/Turso3D/: CMakeLists.txt  Turso3D.h  Turso3DConfig.h  Turso3DConfig.h.in  Turso3DPlatform.h
src/alimer/: CMakeLists.txt
src/alimer_new/: CMakeLists.txt  alimer_config.h.in  core.c  core.h  lua_script.c  lua_script.h  main.c  plugin.c  plugin.h  types.h
src/plugins/: CMakeLists.txt
src/vortice/: CMakeLists.txt  application.cpp  application.hpp  config.h.in  input.cpp  input.hpp  window.cpp  window.hpp
(+902 files in other folders)
